manifests/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: juice-shop
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.global-static-ip-name: "testelb-ip"
spec:
  defaultBackend:
    service:
      name: juice-shop
      port:
        number: 80
  rules:
  - host: "teste-waf.34.160.180.135.nip.io"
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: juice-shop
            port:
              number: 80
